--- a/fieldvision.html
+++ b/fieldvision.html
@@ -2,17 +2,18 @@
 <html>
 <head>
 <meta charset=utf-8>
-<title>grouping app</title>
+<title>Grupo HSO - Lab 1</title>
 <style>
   body { margin: 0; overflow: hidden;}
-canvas { width: 100%; height: 100% }
-
+  canvas { width: 100%; height: 100% }  
 </style>
+  <script src="three.js"></script>
+  <script src="https://unpkg.com/three@0.77.0/examples/js/controls/OrbitControls.js"></script>  
 <canvas id="mycanvas"></canvas>
 </head>
 <body>
-  <script src="three.js"></script>
-  <script src="https://unpkg.com/three@0.77.0/examples/js/controls/OrbitControls.js"></script>
+  <h1>Teste</h1>  
   <script src="script.js"></script>
+  
 </body>
 </html>
