--- a/fieldvision.html
+++ b/fieldvision.html
@@ -2,18 +2,51 @@
 <html>
 <head>
 <meta charset=utf-8>
-<title>Grupo HSO - Lab 1</title>
+<title>Grupo HSO - Trabalho 1</title>
 <style>
-  body { margin: 0; overflow: hidden;}
-  canvas { width: 100%; height: 100% }  
+  body { margin: 5%; overflow-y: scroll;}
+    
+  #quadro1{    
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr;
+    grid-template-areas:
+     " mycanvas quadro2";
+    margin-left: auto;
+    margin-right: auto 
+  }
+  #mycanvas { 
+    display: grid;
+    grid-area: mycanvas;    
+    margin-left: auto;
+    margin-right: auto ;
+    position: relative;        
+  }
+  
+  #quadro2{
+    grid-area: quadro2;
+    display: grid;
+  }
+  
 </style>
   <script src="three.js"></script>
   <script src="https://unpkg.com/three@0.77.0/examples/js/controls/OrbitControls.js"></script>  
-<canvas id="mycanvas"></canvas>
+
 </head>
 <body>
-  <h1>Teste</h1>  
+  <h1>Grupo HSO - Trabalho 1</h1>  
+  <h2>Alunos: <li>Carlos Renato de Andrade Figueiredo</li><li>Matheus Martins</li><li>Samara Ribeiro Silva</li></h2>
+  <div id="quadro1">    
+    <canvas id="mycanvas"></canvas>   
+    <div id = "quadro2">
+      <p>Pressione "c" para mostrar ou esconder o carro.<br>Pressione "v" para mostrar ou esconder os eixos.</p>
+      <label><input id="gridhelper" type="checkbox" checked >Mostrar Grid Helper e Axes Helper</label>
+      <label><input id="car" type="checkbox" checked >Mostrar Carro</label>
+    </div>
+  </div>
+  
   <script src="script.js"></script>
+  
   
 </body>
 </html>
